Use alternate line break to fix promtool checks

--- a/config/federation/prometheus/alerts.yml
+++ b/config/federation/prometheus/alerts.yml
@@ -294,7 +294,8 @@ groups:
       severity: page
     annotations:
       summary: Expected SNMP metrics are missing from Prometheus!
-      description: If the snmp_exporter service is running, then there may be a
+      description: >
+        If the snmp_exporter service is running, then there may be a
         target configuration error. Check the target definitions in GCS[1] and
         the target status in Prometheus[2].
 
@@ -329,7 +330,8 @@ groups:
       severity: ticket
     annotations:
       summary: The script_exporter service is down on missing.
-      description: The script_exporter service runs in a Docker container on a GCE VM
+      description: >
+        The script_exporter service runs in a Docker container on a GCE VM
         named 'script-exporter' in each M-Lab GCP project. For deployment
         details and troubleshooting, you can usually figure out the issue by
         looking through the Travis-CI build logs[1]. You can also look for
@@ -350,7 +352,8 @@ groups:
       severity: page
     annotations:
       summary: Expected script_exporter metrics are missing from Prometheus!
-      description: If the script_exporter service is running, then there may be a target
+      description: >
+        If the script_exporter service is running, then there may be a target
         configuration error. Check the target definitions in GCS[1] and the target
         status in Prometheus[2].
 
@@ -443,7 +446,8 @@ groups:
       severity: page
     annotations:
       summary: A metric for an NDT service is missing.
-      description: If the blackbox_exporter service is running, then there may be a target
+      description: >
+        If the blackbox_exporter service is running, then there may be a target
         configuration error. Check the target definitions in GCS and the target
         status in Prometheus[1]. vdlimit_* metrics are provided by node_exporter
         on each node.
@@ -462,7 +466,8 @@ groups:
       severity: ticket
     annotations:
       summary: A metric for a Neubot service is missing.
-      description: If the blackbox_exporter service is running, then there may be a target
+      description: >
+        If the blackbox_exporter service is running, then there may be a target
         configuration error. Check the target definitions in GCS and the target
         status in Prometheus[1].
         [1]: https://prometheus.mlab-oti.measurementlab.net/targets#job-blackbox-targets
@@ -480,7 +485,8 @@ groups:
       severity: ticket
     annotations:
       summary: A metric for a Mobiperf service is missing.
-      description: If the blackbox_exporter service is running, then there may be a target
+      description: >
+        If the blackbox_exporter service is running, then there may be a target
         configuration error. Check the target definitions in GCS and the target
         status in Prometheus[1].
         [1]: https://prometheus.mlab-oti.measurementlab.net/targets#job-blackbox-targets
