Disable collection of gardener traceroute  metrics

--- a/config/federation/bigquery/bq_gardener_parse_time.sql.template
+++ b/config/federation/bigquery/bq_gardener_parse_time.sql.template
@@ -20,11 +20,12 @@ FROM (
       "sidestream" AS dataset, MAX(parse_time) AS max_parse_time, MIN(parse_time) AS min_parse_time
     FROM
       `{{PROJECT}}.base_tables.sidestream`
-  UNION ALL
-    SELECT
-      "traceroute" AS dataset, MAX(parse_time) AS max_parse_time, MIN(parse_time) AS min_parse_time
-    FROM
-      `{{PROJECT}}.base_tables.traceroute`
+-- TODO: enable once the traceroute parser is reenabled.
+--  UNION ALL
+--    SELECT
+--      "traceroute" AS dataset, MAX(parse_time) AS max_parse_time, MIN(parse_time) AS min_parse_time
+--    FROM
+--      `{{PROJECT}}.base_tables.traceroute`
   UNION ALL
     SELECT
       "switch" AS dataset, MAX(parse_time) AS max_parse_time, MIN(parse_time) AS min_parse_time
