Use snmp service running on gke cluster

--- a/config/federation/prometheus/prometheus.yml.template
+++ b/config/federation/prometheus/prometheus.yml.template
@@ -550,9 +550,7 @@ scrape_configs:
       - source_labels: []
         regex: .*
         target_label: __address__
-        # TODO: enable once all switches are updated.
-        # replacement: snmp-exporter-service.default.svc.cluster.local:9116
-        replacement: snmp-exporter.c.{{PROJECT}}.internal:9116
+        replacement: snmp-exporter-service.default.svc.cluster.local:9116
 
     # This relabel config is the last relabel processed before ingesting data
     # into the datastore.
