--- a/config/federation/prometheus/alerts.yml
+++ b/config/federation/prometheus/alerts.yml
@@ -546,15 +546,10 @@ groups:
         /etc/cron.d/prom_vdlimit_metrics.cron.
       dashboard: https://grafana.mlab-sandbox.measurementlab.net/d/JAq7W6Nmk/
 
-# NPAD_VdlimitTooMuchUsedDisk checks whether NPAD is using more local storage
-# than scraper can support when all files are small (i.e. from
-# paris-traceroute).
-#
-# Note: the threshold is calculated from the number of default inodes allocated
-# in scraper disks (~700k) and the average paris-traceroute file size (~3800b)
-# plus the minimal experiment filesystem size (~1.2GB).
+# NPAD_VdlimitTooMuchUsedDisk checks whether the disk usage for the NPAD vserver
+# is higher than 9GB (90%, as NPAD is set up with a 10GB disk).
   - alert: NPAD_VdlimitTooMuchUsedDisk
-    expr: vdlimit_used{experiment="npad.iupui"} > 3.5*1024*1024
+    expr: vdlimit_used{experiment="npad.iupui"} > 9*1024*1024
     for: 30m
     labels:
       repo: ops-tracker
