Added reference to paris-traceroute.log in the alert's description.

--- a/config/federation/prometheus/alerts.yml
+++ b/config/federation/prometheus/alerts.yml
@@ -559,7 +559,7 @@ groups:
       description: Check /var/spool/iupui_npad/ on the node to see if data is
         being collected. If not, then check the health of scraper for this node
         and slice. If so, then check or other sources of disk usage, like
-        /var/logs.
+        /var/logs and /home/iupui_npad/VAR/logs/paris-traceroute.log.
 
 # A collectd-mlab service has a problem and is down.
   - alert: CoreServices_CollectdMlabDown
