--- a/k8s/prometheus-federation/deployments/prometheus.yml
+++ b/k8s/prometheus-federation/deployments/prometheus.yml
@@ -167,7 +167,7 @@ spec:
           name: prometheus-storage
 
           # - image: measurementlab/gcp-service-discovery:v1.2
-      - image: soltesz/gcp-service-discovery:0.1
+      - image: soltesz/gcp-service-discovery:v0.1
         name: service-discovery
         args: [ "--aef-target=/targets/aeflex-targets/aeflex.json",
                 "--gke-target=/targets/federation-targets/prometheus-clusters.json",
