--- a/config/federation/prometheus/prometheus.yml.template
+++ b/config/federation/prometheus/prometheus.yml.template
@@ -281,18 +281,21 @@ scrape_configs:
         action: replace
         target_label: kubernetes_name
 
+  # Monitor whether we can monitor the k8s platform master.
+  # TODO: add to federation-targets job.
+  - job_name: 'k8s-prometheus'
+    static_configs:
+      - targets: ['k8s-prometheus.{{PROJECT}}.measurementlab.net:9090']
 
   # Scrape config for the node_exporter on eb.measurementlab.net.
   - job_name: 'eb-node-exporter'
     static_configs:
       - targets: ['eb.measurementlab.net:9100']
 
-
   # Scrape config for the node_exporter on mirror.measurementlab.net.
   - job_name: 'mirror-node-exporter'
     static_configs:
       - targets: ['mirror.measurementlab.net:9100']
-
 
   # Scrape config for the node_exporter on dns.measurementlab.net.
   - job_name: 'dns-node-exporter'
