--- a/config/federation/prometheus/alerts.yml
+++ b/config/federation/prometheus/alerts.yml
@@ -833,6 +833,7 @@ groups:
 # Boot_MachineFailedToBoot a machine has failed to boot for more than a day.
   - alert: Boot_MachineFailedToBoot
     expr: epoxy_last_success < epoxy_last_boot
+      unless on(machine) (lame_duck_node == 1 or gmx_machine_maintenance == 1)
     for: 24h
     labels:
       repo: dev-tracker
